--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
 <div class="container2">
     <h1 id="menu">menu</h1>
-  <div id="food">
+  <div class="food">
+    <br><br><br>
     <img src="hamburger1.jpg" alt="">
     burger
   
@@ -43,7 +44,10 @@
   
     <img src="fries.jpg" alt="">
     fries
-  
+  </div>
+
+  <br><br>
+  <div class="food"> 
   
     <img src="hot dog.jpg" alt="">
     hot dog
