--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <p>email</p>
       <input type="email" name="" id="email1">
       <p>reason of contact</p>
-      <textarea name="" id="" cols="30" rows="10"></textarea>
+      <textarea class="texterea1" name="" id="" cols="30" rows="10"></textarea>
       <br>
       <p>reson of refferal</p>
       <select name="reson of refferal" id="">
